# Tucil2_13523009

./: .gitignore  CMakeLists.txt  README.md
src/: ErrorMeasurement.cpp  GifGenerator.cpp  ImageProcessor.cpp  QuadTree.cpp  QuadTreeCompressor.cpp  Utils.cpp  main.cpp
src/include/: ErrorMeasurement.hpp  GifGenerator.hpp  ImageProcessor.hpp  QuadTree.hpp  QuadTreeCompressor.hpp  Utils.hpp
